--- a/job.yaml
+++ b/job.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   # Name of the pod. This is the name to use in any interaction with kubectl
-  name: ArunM
+  name: arunm
 spec:
   securityContext:
     # You need to specify your user ID here. You can get this by running "id -u"
@@ -86,7 +86,7 @@ spec:
     volumeMounts:
     # Entry for your home folder. Make sure to replace <username> with your
     # username.
-    - mountPath: /storage/home/<username>
+    - mountPath: /storage/home/arunm92
       name: home
     # Entry for the other folders mentioned above.
     - mountPath: /tools
